--- a/style.css
+++ b/style.css
@@ -50,31 +50,32 @@ body{
 }
 
 .play-ground{
-    width: 80%;
-    height: 70vh;
+    width: 20%;
+    height: 50%;
     display: flex;
-    max-width: 510px;
-    min-width: 410px;
-    align-items: center;
+    padding-left: 50%;
     justify-content: center;
+    max-width: 510px;
+    min-width: 310px;
     margin-right: 40%;
     margin-left: 20%;
     margin-top: 5%;
     margin-bottom: 20%;
     background-color: rgb(3, 11, 61);
     border-radius: 5%;
-    padding-left: 18%;
+    padding-left: 12%;
 }
 
 .main-game {
     margin-left: -7%;
     display: grid;
-    grid-template-columns: 100px 100px 100px; 
-    margin-right: 7%;
+    grid-template-columns: 45% 40% 40%; 
+    margin-right: 25%;
+    padding: 20%;
 }
 
 .main-game p {
-    font-size: 4.5em;
+    font-size: 2.1em;
     color:aqua;
     font-family: "Varela Round", system-ui;
     font-weight: 400;
@@ -88,13 +89,45 @@ body{
     justify-content: center;
     align-items: center;
     margin-right: 40px;
-    padding: 5% 5%;
+    padding: 15% 5%;
     padding-left: 30%;
-    height: 16vh;
+    height: 12vh;
+    width: 2vw;
     padding-right: 70%;
 }
 
+.left-part{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    justify-content: center;
+    margin-left: 10%;
+
+}
+
+.welcome-box{
+    display: flex;
+    justify-content: center;
+    height: 10vh;
+    align-items: center;
+    font-size: 1.3em;
+    color: crimson;
+    width: 18.9vw;
+    text-wrap: nowrap;
+    background-color: yellow;
+}
+
+.welcome-box p{
+    font-family: "Varela Round", system-ui;
+    font-weight: 400;
+    font-style: normal;
+    display: flex;
+    padding: 0 20%;
+    
+}
+
 .instruction-box {
+    width: fit-content;
     display: flex;
     justify-content: center;
     flex-direction: column;
